# praxis

./: .gitignore  Cargo.toml  FRAMEWORK_SUMMARY.md  PUBLISHING.md  QUICKSTART.md  README.md  test_gpt5_reasoning.py
.cursor/plans/: micropasso-1-c4aa9d43.plan.md
.cursor/rules/: project-rules.md
agent_ui/: README.md  app.js  package.json  tailwind.config.js
agent_ui/components/: ChatArea.tsx  MessageBubble.tsx  Sidebar.tsx
agent_ui/components/icons/: CheckIcon.tsx  CogIcon.tsx  MessageSquareIcon.tsx  SendIcon.tsx
agent_ui/components/messages/: MessageRenderer.tsx  ReasoningMessage.tsx
agent_ui/hooks/: useChat.ts
agent_ui/lib/handlers/: base-handler.ts  done-handler.ts  index.ts  reasoning-handler.ts  tool-call-handler.ts  tool-result-handler.ts
agent_ui/types/: events.ts  index.ts
crates/praxis/: Cargo.toml  README.md
crates/praxis-api/: Cargo.toml  TESTING.md  test-api.sh
crates/praxis-api/config/: default.toml
crates/praxis-api/src/: config.rs  error.rs  main.rs  state.rs
crates/praxis-api/src/handlers/: stream.rs
crates/praxis-api/src/middleware/: logging.rs
crates/praxis-api/src/routes/: messages.rs  mod.rs
crates/praxis-api/tests/: integration_test.rs
crates/praxis-context/: Cargo.toml  README.md
crates/praxis-context/src/: default.rs  lib.rs  strategy.rs  templates.rs
crates/praxis-context/src/templates/: default_summarization.txt  default_system_prompt.txt
crates/praxis-graph/: Cargo.toml  README.md
crates/praxis-graph/examples/: react_loop.rs
crates/praxis-graph/src/: builder.rs  client_factory.rs  graph.rs  lib.rs  node.rs  router.rs  streaming.rs  tools.rs
crates/praxis-graph/src/nodes/: llm_node.rs  mod.rs  tool_node.rs
crates/praxis-graph/src/types/: config.rs  events.rs  mod.rs  output.rs  state.rs
crates/praxis-graph/tests/: integration_reasoning_separation.rs
crates/praxis-llm/: AUDIT.md  Cargo.toml  README.md
crates/praxis-llm/examples/: 01_chat.rs  02_chat_streaming.rs  03_reasoning.rs  04_reasoning_streaming.rs  05_adaptive_batching.rs  06_azure_chat.rs  07_azure_streaming.rs  08_azure_reasoning.rs  09_factory_pattern.rs  10_azure_reasoning_streaming.rs  11_debug_raw_streaming.rs
crates/praxis-llm/src/: client.rs  config.rs  history.rs  lib.rs  streaming.rs  traits.rs
crates/praxis-llm/src/azure_openai/: client.rs  mod.rs
crates/praxis-llm/src/buffer_utils/: adaptive_batching.rs  batching.rs  buffering.rs  mod.rs  sse_parser.rs
crates/praxis-llm/src/mcp/: mod.rs
crates/praxis-llm/src/openai/: client.rs  responses.rs
crates/praxis-llm/src/types/: content.rs  message.rs  mod.rs  tool.rs
crates/praxis-llm/tests/: azure_client_tests.rs  streaming_test.rs  traits_test.rs  types_test.rs
crates/praxis-mcp/: Cargo.toml  README.md
crates/praxis-mcp/examples/: http_client.rs  simple_mcp_agent.rs
crates/praxis-mcp/src/: client.rs  executor.rs  lib.rs
crates/praxis-observability/: Cargo.toml  README.md
crates/praxis-observability/examples/: simple_trace.rs
crates/praxis-observability/src/: lib.rs  observer.rs  types.rs
crates/praxis-observability/src/langfuse/: client.rs  mod.rs  observer.rs  types.rs
crates/praxis-persist/: Cargo.toml  README.md
crates/praxis-persist/src/: accumulator.rs  builder.rs  client.rs  error.rs  lib.rs  trait_client.rs
crates/praxis-persist/src/context/: manager.rs  mod.rs
crates/praxis-persist/src/dbs/: mod.rs
crates/praxis-persist/src/dbs/mongo/: client.rs  mod.rs  models.rs
crates/praxis-persist/src/dbs/mongo/repositories/: message.rs  mod.rs  thread.rs
crates/praxis-persist/src/models/: db_message.rs  db_thread.rs  message.rs  mod.rs  thread.rs
crates/praxis-persist/src/repositories/: message.rs  mod.rs  thread.rs
crates/praxis-persist/src/templates/: default_summarization.txt
crates/praxis-types/: Cargo.toml  README.md
crates/praxis-types/src/: config.rs  events.rs  lib.rs  state.rs
crates/praxis/src/: lib.rs  prelude.rs
docs/: PUBLICATION_STRATEGY.md  README.md  api-rest-wrapper-technical-design.md  architecture-checkpoint-1-node.md  architecture-checkpoint-2-graph.md  architecture-checkpoint-3-streamevents.md  architecture-checkpoint-4-dx.md  architecture-checkpoint-5-mcp.md  architecture-checkpoint-6-api.md  architecture-checkpoint-7-dx.md  architecture-checkpoint-8-persistence.md  architecture-persistence-enhancements.md  architecture.md  plan.md
examples/: README.md
examples/agent_ui/: README.md  package-lock.json
examples/praxis-api/: .env.example  Cargo.toml  README.md
examples/praxis-api/config/: default.toml
examples/praxis-api/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
examples/praxis-api/src/handlers/: stream.rs
examples/praxis-api/src/routes/: health.rs  messages.rs  threads.rs
examples/scripts/: start-all.sh  stop-all.sh
learning/channels-example/: Cargo.toml  README.md
learning/praxis-llm-openai/: Cargo.toml  GPT5_FINAL_CONCLUSION.md  GPT5_REAL_ANALYSIS.md  GPT5_REASONING_EFFORT_COMPLETE_ANALYSIS.md  GPT5_RESPONSES_API_DISCOVERY.md  OPENAI_MODELS_RESEARCH.md  README.md  README_GPT5_RESEARCH.md  REASONING_API_RESEARCH.md
learning/praxis-llm-openai/docs/: GPT5_REALITY_VS_EXPECTATION.md  MODEL_COMPARISON_VISUAL.md  STREAMING_VS_REASONING.md
learning/praxis-llm-openai/examples/: 01_chat.rs  01_simple_chat.rs  02_chat_streaming.rs  02_streaming.rs  03_tools.rs  04_mcp_integration.rs  04_reasoning_streaming.rs  05_cache_demo.rs  test_gpt5_streaming.rs
learning/praxis-llm-openai/src/: cache.rs  client.rs  history.rs  lib.rs  streaming.rs  traits.rs
learning/praxis-llm-openai/src/mcp/: adapter.rs  client.rs
learning/praxis-llm-openai/src/openai/: client.rs  mod.rs  responses.rs
learning/praxis-llm-openai/src/types/: content.rs
mcp_servers/weather/: weather.py
praxis/: Cargo.toml  README.md
praxis/examples/: simple_agent.rs  with_mcp_tools.rs
praxis/src/: builder.rs  lib.rs
praxis_example/: Cargo.toml  README.md  docker-compose.yml
praxis_example/scripts/: init-indexes.js  setup-mongo.sh  stop-mongo.sh
praxis_example/src/: lib.rs
scripts/: start-all.sh  stop-all.sh
(+19 files in other folders)
