[workspace]
resolver = "2"
members = [
    "crates/praxis-llm",
    "crates/praxis-types",
    "crates/praxis-graph",
    "crates/praxis-mcp",
    "crates/praxis-persist",
]
exclude = [
    "examples/praxis-api",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Praxis Team"]
license = "MIT"
repository = "https://github.com/your-org/praxis"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
mongodb = "3.1"
bson = "2.13"

