[package]
name = "praxis-graph"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "React agent orchestrator for building AI agent workflows with LLM and tool execution"
keywords = ["ai", "agent", "workflow", "orchestrator", "react"]
categories = ["asynchronous", "development-tools"]
readme = "README.md"

[dependencies]
praxis-types = { version = "0.1.0", path = "../praxis-types" }
praxis-llm = { version = "0.1.0", path = "../praxis-llm" }
praxis-mcp = { version = "0.1.0", path = "../praxis-mcp" }
praxis-persist = { version = "0.1.0", path = "../praxis-persist" }
tokio.workspace = true
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true

[[example]]
name = "react_loop"
path = "examples/react_loop.rs"

