[package]
name = "praxis-graph"
version = "0.2.0"
edition = "2021"
authors = ["Praxis Team"]
license = "MIT"
repository = "https://github.com/matheussilva/praxis"
homepage = "https://github.com/matheussilva/praxis"
documentation = "https://docs.rs/praxis-graph"
description = "React agent orchestrator for building AI agent workflows with LLM and tool execution"
keywords = ["ai", "agent", "workflow", "orchestrator", "react"]
categories = ["asynchronous", "development-tools"]
readme = "README.md"

[dependencies]
praxis-llm = { version = "0.2.0", path = "../praxis-llm" }
praxis-mcp = { version = "0.2.0", path = "../praxis-mcp" }
praxis-persist = { version = "0.2.0", path = "../praxis-persist" }
praxis-observability = { version = "0.2.0", path = "../praxis-observability", optional = true }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"

[features]
default = []
observability = ["praxis-observability"]

[[example]]
name = "react_loop"
path = "examples/react_loop.rs"

