[package]
name = "praxis-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Model Context Protocol (MCP) client for AI agent tool execution"
keywords = ["ai", "mcp", "tools", "agent", "async"]
categories = ["asynchronous", "api-bindings"]
readme = "README.md"

[dependencies]
rmcp = { version = "0.8.0", features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client",
    "transport-streamable-http-client-reqwest",
    "client-side-sse",
    "reqwest",
] }
praxis-llm = { path = "../praxis-llm" }
tokio.workspace = true
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
url = "2.5"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
thiserror = "2.0"

