[package]
name = "praxis-mcp"
version = "0.1.0"
edition = "2021"
authors = ["Praxis Team"]
license = "MIT"
repository = "https://github.com/matheussilva/praxis"
homepage = "https://github.com/matheussilva/praxis"
documentation = "https://docs.rs/praxis-mcp"
description = "Model Context Protocol (MCP) client for AI agent tool execution"
keywords = ["ai", "mcp", "tools", "agent", "async"]
categories = ["asynchronous", "api-bindings"]
readme = "README.md"

[dependencies]
rmcp = { version = "0.8.0", features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client",
    "transport-streamable-http-client-reqwest",
    "client-side-sse",
    "reqwest",
] }
praxis-llm = { version = "0.1.1", path = "../praxis-llm" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.5"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
thiserror = "2.0"

