[package]
name = "praxis-persist"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "MongoDB persistence layer for AI agent conversations with context management"
keywords = ["ai", "mongodb", "persistence", "database", "async"]
categories = ["asynchronous", "database"]
readme = "README.md"

[dependencies]
# Praxis crates
praxis-llm = { path = "../praxis-llm" }
praxis-types = { path = "../praxis-types" }

# Database
mongodb = { workspace = true }
bson = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date/time
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = "2.0"

# Async utilities
futures = { workspace = true }

# Logging
tracing = "0.1"

