[package]
name = "praxis-persist"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "MongoDB persistence layer for AI agent conversations with context management"
keywords = ["ai", "mongodb", "persistence", "database", "async"]
categories = ["asynchronous", "database"]
readme = "README.md"

[features]
default = []
mongodb = ["dep:mongodb", "dep:bson"]

[dependencies]
# Praxis crates
praxis-llm = { version = "0.1.0", path = "../praxis-llm" }
praxis-types = { version = "0.1.0", path = "../praxis-types" }

# Database (optional)
mongodb = { workspace = true, optional = true }
bson = { workspace = true, optional = true }

# Async runtime
tokio = { workspace = true }
async-trait = "0.1"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date/time
chrono = { workspace = true }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
anyhow = { workspace = true }
thiserror = "2.0"

# Async utilities
futures = { workspace = true }

# Logging
tracing = "0.1"

