[package]
name = "praxis-persist"
version = "0.1.1"
edition = "2021"
authors = ["Praxis Team"]
license = "MIT"
repository = "https://github.com/matheussilva/praxis"
homepage = "https://github.com/matheussilva/praxis"
documentation = "https://docs.rs/praxis-persist"
description = "MongoDB persistence layer for AI agent conversations with context management"
keywords = ["ai", "mongodb", "persistence", "database", "async"]
categories = ["asynchronous", "database"]
readme = "README.md"

[features]
default = []
mongodb = ["dep:mongodb", "dep:bson"]

[dependencies]
# Praxis crates
praxis-llm = { version = "0.1.0", path = "../praxis-llm" }

# Database (optional)
mongodb = { version = "3.1", optional = true }
bson = { version = "2.13", optional = true }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
anyhow = "1"
thiserror = "2.0"

# Async utilities
futures = "0.3"

# Logging
tracing = "0.1"

