[package]
name = "praxis-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
praxis-llm = { path = "../praxis-llm" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid = { workspace = true }

