[package]
name = "praxis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "High-performance React agent framework for building AI agents with LLM, tool execution, and persistence"
keywords = ["ai", "agent", "llm", "react", "framework", "async", "tokio"]
categories = ["asynchronous", "development-tools", "api-bindings"]
readme = "README.md"

[dependencies]
# Core crates
praxis-graph = { version = "0.1.0", path = "../praxis-graph" }
praxis-llm = { version = "0.1.0", path = "../praxis-llm" }
praxis-mcp = { version = "0.1.0", path = "../praxis-mcp" }
praxis-persist = { version = "0.1.0", path = "../praxis-persist" }
praxis-context = { version = "0.1.0", path = "../praxis-context" }

# Re-export common dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true

[features]
default = []
mongodb = ["praxis-persist/mongodb"]

[lib]
name = "praxis"
path = "src/lib.rs"

