[package]
name = "praxis"
version = "0.2.0"
edition = "2021"
authors = ["Praxis Team"]
license = "MIT"
repository = "https://github.com/matheussilva/praxis"
homepage = "https://github.com/matheussilva/praxis"
documentation = "https://docs.rs/praxis"
description = "High-performance React agent framework for building AI agents with LLM, tool execution, and persistence"
keywords = ["ai", "agent", "llm", "react", "framework"]
categories = ["asynchronous", "development-tools", "api-bindings"]
readme = "README.md"

[dependencies]
# Core crates
praxis-graph = { version = "0.2.0", path = "../praxis-graph" }
praxis-llm = { version = "0.2.0", path = "../praxis-llm" }
praxis-mcp = { version = "0.2.0", path = "../praxis-mcp" }
praxis-persist = { version = "0.2.0", path = "../praxis-persist" }
praxis-context = { version = "0.2.0", path = "../praxis-context" }
praxis-observability = { version = "0.2.0", path = "../praxis-observability", optional = true }

# Re-export common dependencies
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
futures = "0.3"

[features]
default = []
mongodb = ["praxis-persist/mongodb"]
observability = ["praxis-observability", "praxis-graph/observability"]

[lib]
name = "praxis"
path = "src/lib.rs"

