[package]
name = "praxis-api"
version = "0.1.0"
edition = "2021"
authors = ["Praxis Team"]
license = "MIT"

[[bin]]
name = "praxis-api"
path = "src/main.rs"

[dependencies]
praxis-graph = { path = "../../crates/praxis-graph" }
praxis-persist = { path = "../../crates/praxis-persist", features = ["mongodb"] }
praxis-context = { path = "../../crates/praxis-context" }
praxis-llm = { path = "../../crates/praxis-llm" }
praxis-mcp = { path = "../../crates/praxis-mcp" }
praxis-types = { path = "../../crates/praxis-types" }

# Axum & HTTP
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "compression-gzip", "timeout"] }

# SSE
axum-streams = "0.11"

# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-stream = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
config = "0.14"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# MongoDB
mongodb = "3.1"
bson = "2.13"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# OpenAPI
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

# Environment
dotenvy = "0.15"

