[package]
name = "praxis-llm-openai"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# HTTP client (rustls to avoid OpenSSL dependency)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Streaming utilities
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"

# Error handling
thiserror = "1"
anyhow = "1"

# Utils
chrono = "0.4"

[[example]]
name = "01_simple_chat"
path = "examples/01_simple_chat.rs"

[[example]]
name = "02_streaming"
path = "examples/02_streaming.rs"

[[example]]
name = "03_tools"
path = "examples/03_tools.rs"

[[example]]
name = "04_mcp_integration"
path = "examples/04_mcp_integration.rs"
